[gd_scene load_steps=2 format=3 uid="uid://c1234567890ab"]

[ext_resource type="Script" path="res://ui/components/chapter_card.gd" id="1"]

[node name="ChapterCard" type="PanelContainer"]
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Chapter Name"

[node name="ExpandButton" type="Button" parent="VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "â–¶"

[node name="LevelsGrid" type="GridContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 5
